# linal

./: CMakeLists.txt  Doxyfile  LICENSE.txt  TODO
cmake/: CommonDefinitions.cmake  FindBLAS.cmake  FindSelfSuperLU.cmake  FindSelfUmfPack.cmake  FindUmfPack.cmake
cmake/obsolete/: FindBLAS.cmake
src/: CMakeLists.txt  add_csr.cpp  allocator.h  array.h  array_pool.h  blas.cpp  blas_wrapper.cpp  config.cpp  fpe.c  fpe.cpp  fpe.h  gmres.c  gmres.h  gmres_standalone.c  linal.cpp  linal.h  linal_base.cpp  linal_util.h  lu_solve.c  lu_solve.cpp  lu_solve.h  mm_csr.h  mm_dense.cpp  mm_dense.h  mm_ell.h  mv_csr.cpp  mv_csr.h  mv_dense.cpp  mv_dense.h  mv_ell.cpp  mv_ell.h  noblas.cpp  solver.h  timer.cpp  util.cpp
src/gpu/: alloc_cu.h  gmres.cu  linal.cu  linal_cuda.cpp  linal_cuda.h  mv_csr.cu  mv_ell.cu  texture.h
src/impl/: solver_impl.h  solver_superlu.h  solver_umfpack.h
tests/: CMakeLists.txt  test_blas.cpp  test_gpu_reduction.cpp  test_lu.cpp  test_mm_dense.cpp  test_solver.cpp  test_sparse.cpp
